# Job_AI_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements-data.txt  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  ncs-sync.yml
data/: README_DATASET.md
data/gold/: generation_gold.yaml  human_eval_rubric.yaml  ncs_yaml_review_checklist.yaml  (+2 more)
docs/: README.md
scripts/: check_deployment.py  check_langfuse_trace.py  check_llm_provider.py  check_rag_readiness.py  evaluate_generation.py  evaluate_retrieval.py  ingest_processed_dataset.py  inspect_export_quality.py  prepare_mvp_dataset.py  prepare_ncs_catalog.py  prepare_ncs_raw_dataset.py  run_mvp_demo.py  run_mvp_verification.py  sync_ncs_official_api.py  validate_mvp_dataset.py  verify_ncs_expansion_rag.py  verify_ncs_official_sync.py
tests/: test_config_and_http_provider.py  test_dataset_loading_and_retrieval_eval.py  test_dataset_validation.py  test_embedding_provider.py  test_env_loading.py  test_export_api.py  test_export_service.py  test_generation_evaluation.py  test_generation_log.py  test_ingest_processed_dataset.py  test_langfuse_tracing.py  test_llm_provider_readiness.py  test_mvp_demo_runner.py  test_mvp_verification.py  test_ncs_official_api.py  test_ncs_official_sync.py  test_ncs_specialization.py  test_ppt_template.py  test_prepare_ncs_raw_dataset.py  test_rag_api.py  test_rag_repository.py  test_stage1_core.py  test_supabase_migration.py  test_ui_workflow.py  test_vector_store.py
(+71 files in other folders)
