[project]
name = "lectureops-agent"
version = "0.1.0"
description = "Job training lecture operation assistant AI agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.2.0",
    "streamlit>=1.59",
    "PyMuPDF>=1.24",
    "chromadb>=0.5",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]





