[project]
name = "lessonpack-ai"
version = "0.1.0"
description = "Job training lesson package generation assistant AI agent MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "PyMuPDF>=1.24",
    "uvicorn[standard]>=0.29",
    "PyYAML>=6.0",
    "supabase>=2.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-api>=1.28.0",
    "litellm>=1.74.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
